<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trevor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kkrasnosky@gmail.com">k2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
